[package]
name = "my_parser_kma_lys_taras"
version = "0.1.0"
edition = "2024"
authors = ["Taras Lys spental12345@gmail.com"]
description = "A simple parser project for KMA"
license = "MIT"
repository = "https://github.com/1KINGO1/my_parser_kma_lys_taras"
readme = "README.md"

[dependencies]
peg = "0.8.5"
